--- a/report.html
+++ b/report.html
@@ -140,7 +140,7 @@
             </div>
 
             <!-- VIEW TICKETS TAB CONTENT -->
-            <div id="view-tickets" class="tab-content" style="display: none;">
+            <div id="view-tickets" class="tab-content">
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
                     <h2 style="font-size: 16px; margin: 0;">Open Tickets</h2>
                     <select id="ticketSortSelect"
