--- a/report.html
+++ b/report.html
@@ -106,12 +106,13 @@
                                 <option value="Pedestrian">Pedestrian / Walk</option>
                             </select>
                         </div>
-                        <div class="form-group" style="margin-bottom: 0;">
+                        <div id="lightSizeContainer" class="form-group" style="margin-bottom: 0;">
                             <label>Lens Size</label>
                             <select id="reportLightSize">
-                                <option value="" disabled selected>Select size...</option>
+                                <option value="" disabled selected>Select size (Optional)...</option>
                                 <option value="8 inch">8 inch</option>
                                 <option value="12 inch">12 inch</option>
+                                <option value="PV">PV</option>
                             </select>
                         </div>
                     </div>
